--- a/online_2D.html
+++ b/online_2D.html
@@ -53,6 +53,10 @@
 			
 			background-color: #fffae8; /* 背景 */
 		}
+		html.outDown{
+			background-color: #fffae8;
+			overflow-y: hidden;
+		}
 		
 		body{
 			position: absolute;
@@ -62,16 +66,22 @@
 			top: 0;
 			margin: 0;
 			
-			display: flex;
-			flex-direction: column;
-			
 			background-color: #fffae8; /* 背景 */
+			
+			opacity: 0; /* 完全透明 */
+			transition: opacity 1s, top 0.6s; /* 出入动画 */
+		}
+		html.fadeIn > body{
+			opacity: 1; /* 不透明 */
+		}
+		html.outDown > body{
+			top: 100%; /* 下滑 */
+			overflow-y: hidden;
 		}
 		
 		
 		/* header */
 		body > header{
-			flex: none;
 			display: flex;
 			width: 100%;
 			background-color: #aef;
@@ -322,11 +332,11 @@
 let WIDTH;
 function resize(){
 	console.log("resize")
-	$("#board").css("width", "0px")
-		.css("height", "0px");
-	WIDTH = Math.min(innerWidth-20, innerHeight - $("#main > div").height()*2);
+	WIDTH = Math.min(innerWidth-20, innerHeight - $("#main > .side").height()*2);
 	$("#board").css("width", WIDTH + "px")
-		.css("height", WIDTH + "px");
+		.css("height", WIDTH + "px")
+		.attr("width", 2*WIDTH)
+		.attr("height", 2*WIDTH);
 	
 	$("#tools > .scores").attr("width", innerWidth-18);
 }
@@ -334,14 +344,12 @@ resize();
 //$(window).resize(resize);
 </script>
 <script>
-$("body").hide().fadeIn(1000);
+$("html").addClass("fadeIn");
 function go(url){
-	$("html").css("background", "#fffae8");
-	$("body").animate({
-		top: "-100%"
-	}, 600, function(){
+	$("html").addClass("outDown");
+	setTimeout(function(){
 		location.href = url;
-	});
+	}, 600);
 	layer.load(0);
 }
 
@@ -477,8 +485,8 @@ const N = +location.getQueryString("N"),
 	rows = +location.getQueryString("rows"),
 	place = +location.getQueryString("place"),
 	{mistake=true} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}");
-$("#board").attr("height", $("#board").attr("width") *rows/cols)
-	.css("height", WIDTH *rows/cols + "px");
+$("#board").css("height", WIDTH *rows/cols + "px")
+	.attr("height", 2*WIDTH *rows/cols);
 const board = new Board({ //棋盘
 	canvas: $("#board")[0],
 	background: "#fcce73",
@@ -512,12 +520,8 @@ let game = {
 			{total: 300, step: 30} //1: 黑
 		], //剩余时间
 		scores: {
-			now: [ //当前
-				0, 0
-			],
-			goal: [ //目标
-				0, 0
-			],
+			now: [0, 0], //当前
+			goal: [0, 0], //目标
 			t0: +new Date(),
 			k: 0.005
 		}, //分数 白:0 黑:1
@@ -615,7 +619,7 @@ let game = {
 				i, j, direct
 			}).then((data)=>{
 				waiting = false;
-				console.log("play callback:", data.action)
+				console.log("play callback:", data.action, {i,j})
 				switch (data.action){
 					case 2: //下黑棋
 						board.remove(-1)
@@ -859,6 +863,8 @@ function init(){
 	game.steps = 0;
 	game.turn = 1;
 	game.winner = false;
+	clearInterval( game.ids[0] );
+	clearInterval( game.ids[1] ); //时间暂停
 	game.t0[0] = game.t0[1] = game.ids[0] = game.ids[1] = null;
 	game.time[0].total = 300;
 	game.time[0].step = 30;
@@ -877,11 +883,14 @@ function init(){
 	review_id = null;
 	
 	//线程
+	if (worker)
+		worker.terminate(); //关闭线程
 	worker = new Worker("./js/worker.js"); //多线程
 	worker.postMessage({
 		type: "init", //初始化
 		cols,
 		rows,
+		D: 2,
 		N,
 		mis: mistake
 	});
@@ -1228,14 +1237,16 @@ function request(data){
 }
 
 
+//下棋
 $("#board").click(function(e){
+	if (!worker) return; //未初始化线程
+	if (game.first != game.turn) return; //未轮到自己
+	if (game.winner !== false) return; //已结束
+	if (waiting) return; //上次未响应
+	
 	const {offsetX: x, offsetY: y} = e;
 	const [i, j] = board.xy2ij(x,y, place);
 	console.log("click", [x, y], [i, j])
-	
-	if (game.first != game.turn) return; //未轮到自己
-	
-	if (game.winner !== false) return; //已结束
 	
 	game.play(i, j);
 });
@@ -1250,6 +1261,8 @@ $("#back").click(function(){
 
 //重来
 $("#restart").click(function(){
+	if (game.winner === false) //游戏未结束
+		return layer.msg("游戏未结束，无法请求再来一局，可以先求和/认输");
 	layer.confirm("确定请求再来一局吗？", function(index){
 		layer.close(index);
 		send("gobang_game_replay", ROOM, oldID);
@@ -1261,6 +1274,8 @@ $("#restart").click(function(){
 /* tools */
 //认输
 $("#toolBtn > .giveUp").click(function(){
+	if (game.winner !== false) //游戏已结束
+		return layer.msg("游戏已结束，无法认输");
 	layer.confirm("真的要认输吗？", function(index){
 		layer.close(index);
 		send("gobang_game_giveUp", ROOM, oldID);
@@ -1270,6 +1285,8 @@ $("#toolBtn > .giveUp").click(function(){
 
 //求和
 $("#toolBtn > .drawMatch").click(function(){
+	if (game.winner !== false) //游戏已结束
+		return layer.msg("游戏已结束，无法求和");
 	layer.confirm("确定请求求和吗？", function(index){
 		layer.close(index);
 		send("gobang_game_drawMatch", ROOM, oldID);
@@ -1308,6 +1325,8 @@ $("#toolBtn > .review").click(function(){
 		
 		$("#tools > .scores").slideUp(); //关闭棋局评分
 		game.updateLines(false); //关闭棋局分析
+		$("#tools > .review > .stop").hide();
+		$("#tools > .review > .play").show(); //暂停
 		
 		request({
 			type: "review" //重放
@@ -1373,8 +1392,8 @@ $("#toolBtn > .review").click(function(){
 		$(this).attr("disabled", "disabled");
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
 		
-		$("#tools > .review > .stop").show();
-		$("#tools > .review > .play").hide();
+		$("#tools > .review > .stop").hide();
+		$("#tools > .review > .play").show(); //暂停
 		clearInterval(review_id);
 		review_id = null;
 	}
